--- a/FoodHub/Views/Home/Menu.cshtml
+++ b/FoodHub/Views/Home/Menu.cshtml
@@ -20,13 +20,13 @@
                         <div class="col-md-6 col-sm-6 col-sx-12">
                             <div class="menu-item">
                                 <div class="menu-left">
-                                    <img src=@Q.IMG alt="@Q.ITEM_NM">
+                                    <img src=@Q.IMG alt="@Q.ITEM_NM">                       @*ekhane image path ta theek korte hobe*@
                                    
 
                                 </div>
                                 <div class="menu-right">
                                     <span class="price">@Q.PRICE</span>
-                                    <h4>@Q.ITEM_NM</h4>
+                                    <a href="~/Home/Single_Item/@Q.ITEM_CD"><h4>@Q.ITEM_NM</h4></a>
                                     <div class="rating">
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
