--- a/FoodHub/Views/Shared/_Layout.cshtml
+++ b/FoodHub/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
                             </div>
                         </li>
                         <li class="cart">
-                            <a href="#">
+                            <a href=@Url.Action("Cart","Home")>
                                 <i class="fa fa-shopping-cart"></i>
                                 <span class="cart-count">0</span>
                             </a>
