--- a/FoodHub/Views/Home/Cart.cshtml
+++ b/FoodHub/Views/Home/Cart.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model FoodHub.ViewModels.CartEntry
 @{
     ViewBag.Title = "Cart";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -24,90 +24,79 @@
                     Price
                 </div>
                 <div class="col col-qty align-center">QTY</div>
-                <div class="col">VAT</div>
+                <div class="col">GST</div>
                 <div class="col">Total</div>
             </div>
+            @if (Model.CARTITEMLIST != null)
+            {
+                for (var Q = 0; Q <= Model.CARTITEMLIST.Count() - 1; Q++)
+                {
+                    if (Q % 2 == 0)
+                    {
+                        <div class="layout-inline row">
 
-            <div class="layout-inline row">
+                            <div class="col col-pro layout-inline">
+                                @*<img src="" alt="kitten" />*@
+                                <img src="@Model.CARTITEMLIST[Q].IMG_FILE" id="img">
+                                <p>@Model.CARTITEMLIST[Q].ITEM_NM</p>
+                                @Html.HiddenFor(a => a.CARTITEMLIST[Q].CART_ID)
+                                @Html.HiddenFor(a => a.CARTITEMLIST[Q].ITEM_CD)
+                            </div>
+                            <div class="col col-price col-numeric align-center ">
+                                <p>Rs.@Model.CARTITEMLIST[Q].PRICE</p>
+                            </div>
 
-                <div class="col col-pro layout-inline">
-                    <img src="" alt="kitten" />
-                    <p>Happy Little Critter</p>
-                </div>
+                            <div class="col col-qty layout-inline">
+                                <a href="#" class="qty qty-minus">-</a>
+                                <input type="numeric" value=@Model.CARTITEMLIST[Q].QNTY />
+                                <a href="#" class="qty qty-plus">+</a>
+                            </div>
 
-                <div class="col col-price col-numeric align-center ">
-                    <p>£59.99</p>
-                </div>
+                            <div class="col col-vat col-numeric">
+                                <p>Rs.@Model.CARTITEMLIST[Q].GSTAMT</p>
+                            </div>
+                            <div class="col col-total col-numeric">
+                                <p>Rs.@Model.CARTITEMLIST[Q].TOTALPRICE</p>
+                            </div>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="layout-inline row row-bg2">
 
-                <div class="col col-qty layout-inline">
-                    <a href="#" class="qty qty-minus">-</a>
-                    <input type="numeric" value="3" />
-                    <a href="#" class="qty qty-plus">+</a>
-                </div>
+                            <div class="col col-pro layout-inline">
+                                @*<img src="http://lovemeow.com/wp-content/uploads/2012/05/kitten81.jpg" alt="kitten" />*@
+                                <img src="@Model.CARTITEMLIST[Q].IMG_FILE" id="img">
+                                <p>@Model.CARTITEMLIST[Q].ITEM_NM</p>
+                                @Html.HiddenFor(a => a.CARTITEMLIST[Q].CART_ID)
+                                @Html.HiddenFor(a => a.CARTITEMLIST[Q].ITEM_CD)
+                            </div>
 
-                <div class="col col-vat col-numeric">
-                    <p>£2.95</p>
-                </div>
-                <div class="col col-total col-numeric">
-                    <p> £182.95</p>
-                </div>
-            </div>
+                            <div class="col col-price col-numeric align-center ">
+                                <p>Rs.@Model.CARTITEMLIST[Q].PRICE</p>
+                            </div>
 
-            <div class="layout-inline row row-bg2">
+                            <div class="col col-qty  layout-inline">
+                                <a href="#" class="qty qty-minus ">-</a>
+                                <input type="numeric" value=@Model.CARTITEMLIST[Q].QNTY />
+                                <a href="#" class="qty qty-plus">+</a>
+                            </div>
 
-                <div class="col col-pro layout-inline">
-                    <img src="http://lovemeow.com/wp-content/uploads/2012/05/kitten81.jpg" alt="kitten" />
-                    <p>Scared Little Kittie</p>
-                </div>
+                            <div class="col col-vat col-numeric">
+                                <p>Rs.@Model.CARTITEMLIST[Q].GSTAMT</p>
+                            </div>
+                            <div class="col col-total col-numeric">
+                                <p>Rs.@Model.CARTITEMLIST[Q].TOTALPRICE</p>
+                            </div>
 
-                <div class="col col-price col-numeric align-center ">
-                    <p>£23.99</p>
-                </div>
-
-                <div class="col col-qty  layout-inline">
-                    <a href="#" class="qty qty-minus ">-</a>
-                    <input type="numeric" value="1" />
-                    <a href="#" class="qty qty-plus">+</a>
-                </div>
-
-                <div class="col col-vat col-numeric">
-                    <p>£1.95</p>
-                </div>
-                <div class="col col-total col-numeric">
-                    <p>£25.94</p>
-                </div>
-
-            </div>
-
-            <div class="layout-inline row">
-
-                <div class="col col-pro layout-inline">
-                    <img src="http://cdn.cutestpaw.com/wp-content/uploads/2012/04/l-my-first-kitten.jpg" alt="kitten" />
-                    <p>Curious Little Begger</p>
-                </div>
-
-                <div class="col col-price col-numeric align-center ">
-                    <p>£59.99</p>
-                </div>
-
-                <div class="col col-qty layout-inline">
-                    <a href="#" class="qty qty-minus">-</a>
-                    <input type="numeric" value="3" />
-                    <a href="#" class="qty qty-plus">+</a>
-                </div>
-
-                <div class="col col-vat col-numeric">
-                    <p>£2.95</p>
-                </div>
-                <div class="col col-total col-numeric">
-                    <p>£182.95</p>
-                </div>
-            </div>
-
+                        </div>
+                    }
+                }
+            }
             <div class="tf">
                 <div class="row layout-inline">
                     <div class="col">
-                        <p>VAT</p>
+                        <p>GST</p>
                     </div>
                     <div class="col">0</div>
                 </div>
