--- a/FoodHub/Views/Shared/_Lunch.cshtml
+++ b/FoodHub/Views/Shared/_Lunch.cshtml
@@ -17,7 +17,7 @@
                                 <div class="details">
                                     <h3><a href="single-item.html">@Q.ITEM_NM</a></h3>
                                     <p>@Q.ITEM_DESC</p>
-                                    <a href="#" class="add-cart">Add To Cart <i class="icon-cart"></i></a>
+                                    <a onclick="AddToCart(@Q.ITEM_CD)" style="cursor:pointer;" class="add-cart">Add To Cart <i class="icon-cart"></i></a>
                                 </div>
                                 <div class="price">
                                     <span>Rs. @Q.PRICE</span>
