--- a/FoodHub/Views/Home/Index.cshtml
+++ b/FoodHub/Views/Home/Index.cshtml
@@ -12,6 +12,8 @@
             datatype: JSON,
             success: function (data) {
                 if (data == "Success") {
+                    //window.open("~/Home/Cart");
+                    window.location.href = "/Home/Cart";
                 }
                 else {
                     alert(data);
