--- a/FoodHub/Views/Shared/_Layout.cshtml
+++ b/FoodHub/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                         <li class="cart">
                             <a href=@Url.Action("Cart","Home")>
                                 <i class="fa fa-shopping-cart"></i>
-                                <span class="cart-count">0</span>
+                                <span class="cart-count">@ViewBag.CartCount</span>
                             </a>
                         </li>
                     </ul>
